--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,10 @@
 input[type=text] {
-    width: 130px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-/* When the input field gets focus, change its width to 100% */
-input[type=text]:focus {
     width: 100%;
 }
 
+.head-s {
+  background-color: #878787;
+}
 
 body {
   font-family: "Lucida Console", Monospace;
@@ -35,6 +31,7 @@ a:hover {
 .btn {
     border: 2px solid black;
     border-radius: 5px;
+    width: 100%;
 }
 
 .modal {
