--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ input[type=text] {
 #logo {
   width:100%;
 }
+.nameCell {
+  width:100%;
+}
 body {
   font-family: "Lucida Console", Monospace;
   font-size: 16px;
