--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ input[type=text] {
 }
 .nameRow {
   cursor:pointer;
+
 }
 .nameRow:hover { 
     background-color: yellow;
@@ -18,6 +19,7 @@ input[type=text] {
 }
 .nameCell {
   width:100%;
+  border-top: 1px solid #ddd;
 }
 body {
   font-family: "Lucida Console", Monospace;
