--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@ input[type=text] {
   display:none;
 }
 .head-s {
-  background-color: #878787;
+  background-color: #FFF6EE;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px
 }
 #logo {
   width:100%;
@@ -22,7 +25,7 @@ input[type=text] {
   border-top: 1px solid #ddd;
 }
 body {
-  font-family: "Lucida Console", Monospace;
+  font-family: 'Merriweather Sans', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -31,11 +34,30 @@ p {
   max-width: 650px;
   margin: 40px auto;
 }
-h3{
-  max-width: 750px;
-  margin: 40px auto;
-  font-size: 115%;
+h1 {
+  font-size: 60px;
+  font-weight: bold;
+  color: #484848;
+  margin-top: 100px;
 }
+
+h2{
+  max-width: 750px;
+  margin: 30px auto;
+  font-size: 160%;
+  font-family: 'helvetica', sans-serif;
+  color: #4A4A4A;
+  margin-bottom: 50px;
+} 
+
+h3 {
+  font-size: 170%;
+}
+
+#filter-button{
+  margin-top: 20px;
+}
+
 a {
   color:#212b31;
 }
@@ -43,22 +65,29 @@ a:hover {
   color:#212b31;
 }
 
-.btn {
-    border: 2px solid black;
+.btn,.btn:hover {
+    border: 2px solid #e03a3e;
     border-radius: 5px;
     width: 100%;
+    color: #fff;
+    background-color: #e03a3e;
+    
 }
 
-.modal {
-  z-index:3;
-  display:none;
-  padding-top:50px;
-  position:fixed;
-  left:400px;
-  top:100px;
-  width:800px;
-  height:1000px;
-  overflow:auto;
-  background-color:rgb(0,0,0);
-  background-color:rgba(0,0,0,0.4)
+
+#top-button {
+    border: 2px solid #E03A3E;
+    border-radius: 5px;
+    width: 100%;
+    background-color: transparent; 
+    color: #E03A3E;
 }
+
+#top-button:hover{
+  color: #fff;
+  background-color:#e03a3e;
+  transition: 0.4s;
+ 
+}
+
+
