--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,13 @@ input[type=text] {
 
 }
 .nameRow:hover { 
-    background-color: yellow;
+    background-color: #f5f5f5;
+
+}
+.tags {
+  color: #817f7f;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .description {
   display:none;
@@ -23,6 +29,8 @@ input[type=text] {
 .nameCell {
   width:100%;
   border-top: 1px solid #ddd;
+  padding-bottom:30px;
+  padding-top:20px;
 }
 body {
   font-family: 'Merriweather Sans', sans-serif;
