--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 input[type=text] {
+    line-height: 1.7em;
+    font-size:120%;
     width: 100%;
+    border-radius:4px;
+    border-style:solid;
+    border-width:1px;
 }
 .nameRow {
   cursor:pointer;
@@ -7,15 +12,18 @@ input[type=text] {
 }
 .nameRow:hover { 
     background-color: #f5f5f5;
-
 }
 .tags {
   color: #817f7f;
+  line-height: 40px;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 .description {
   display:none;
+}
+.desCell {
+  margin-left: 20px;
 }
 .head-s {
   background-color: #FFF6EE;
@@ -25,12 +33,19 @@ input[type=text] {
 }
 #logo {
   width:100%;
+  min-width: 50px;
 }
 .nameCell {
   width:100%;
   border-top: 1px solid #ddd;
-  padding-bottom:30px;
+  padding-bottom:20px;
   padding-top:20px;
+  font-size: 125%;
+
+}
+#table {
+  margin-right: 15px;
+  margin-left: 15px;
 }
 body {
   font-family: 'Merriweather Sans', sans-serif;
@@ -39,11 +54,10 @@ body {
 }
 p {
   font-size: medium;
-  max-width: 650px;
-  margin: 40px auto;
+  
 }
 h1 {
-  font-size: 60px;
+  font-size: 400%;
   font-weight: bold;
   color: #484848;
   margin-top: 100px;
@@ -57,9 +71,15 @@ h2{
   color: #4A4A4A;
   margin-bottom: 50px;
 } 
+.container {
 
+}
+#tableB {
+
+}
 h3 {
-  font-size: 170%;
+  font-size: 250%;
+  margin-bottom: 35px;
 }
 
 #filter-button{
@@ -81,12 +101,14 @@ a:hover {
     background-color: #e03a3e;
     
 }
-
+.plus {
+  font-size: 200%;
+}
 
 #top-button {
     border: 2px solid #E03A3E;
     border-radius: 5px;
-    width: 100%;
+    min-width: 150px;
     background-color: transparent; 
     color: #E03A3E;
 }
