--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ input[type=text] {
     width: 100%;
     border-radius:4px;
     border-style:solid;
+    border-color: #979797;
     border-width:1px;
+    color : #817f7f;
 }
 .projectEntry {
   cursor:pointer;
